# VelocityGL

./: README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  keystore.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/velocitygl/: ConfigManager.kt  VelocityGL.kt  VelocityGLApp.kt
app/src/main/java/com/velocitygl/plugin/: RendererProvider.kt  RendererReceiver.kt
app/src/main/java/com/velocitygl/ui/: MainActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: circle_indicator.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: file_paths.xml  preferences.xml
native/: CMakeLists.txt
native/include/: velocity_gl.h
native/src/: velocity_main.c
native/src/buffer/: buffer_pool.c  buffer_pool.h  draw_batcher.c  draw_batcher.h
native/src/core/: gl_caps.c  gl_context.c  gl_extensions.c  gl_state.c  gl_wrapper.c  gl_wrapper.h
native/src/gl/: gl_functions.c  gl_functions.h
native/src/gpu/: adreno_tweaks.c  gpu_detect.c  gpu_detect.h  mali_tweaks.c
native/src/optimize/: frame_pacing.c  resolution_scaler.c  resolution_scaler.h  state_optimizer.c
native/src/shader/: glsl_parser.c  shader_cache.c  shader_cache.h  shader_optimizer.c  shader_translator.c
native/src/texture/: async_loader.c  texture_cache.c  texture_compress.c  texture_manager.c  texture_manager.h
native/src/utils/: config.c  config.h  hash.c  hash.h  log.c  log.h  memory.c  memory.h  thread_pool.c
